# pedometer

./: .clang-format  CMakeLists.txt  sdkconfig
board/: CMakeLists.txt
board/include/: board_config.h
components/action_handler/: CMakeLists.txt  action_handler.cpp
components/action_handler/include/: action_handler.hpp
components/bluetooth/: CMakeLists.txt  bluetooth.cpp
components/bluetooth/include/: bluetooth.hpp
components/clock_counter/: CMakeLists.txt  clock_counter.cpp
components/clock_counter/include/: clock_counter.hpp  clock_counter_config.hpp
components/menu/: CMakeLists.txt  menu.cpp  menu_pages.cpp
components/menu/include/: menu.hpp  menu_pages.hpp
components/oled_sh1106/: CMakeLists.txt  oled_sh1106.c
components/oled_sh1106/include/: oled_sh1106.h  oled_sh1106_bitmap.h  oled_sh1106_commands.h  oled_sh1106_config.h  oled_sh1106_font.h
components/step_counter/: CMakeLists.txt  step_counter.cpp
components/step_counter/include/: step_counter.hpp
components/system_data/: CMakeLists.txt  system_data.cpp  system_data_test.cpp
components/system_data/include/: system_data.hpp  system_data_config.hpp
main/: CMakeLists.txt  main.cpp
unit_tests/: README.md
unit_tests/system_data/: CMakeLists.txt  system_data_test.cpp
